--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@aws-cdk/aws-s3-deployment": "1.91.0",
     "@aws-cdk/core": "1.91.0",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
