--- a/package.json
+++ b/package.json
@@ -31,43 +31,44 @@
     "url": "https://github.com/elthrasher/cdk-esbuild-s3-website"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.91.0",
-    "@aws-cdk/aws-iam": "1.91.0",
+    "@aws-cdk/assert": "1.92.0",
+    "@aws-cdk/aws-iam": "1.92.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/react-hooks": "^5.1.0",
     "@types/aws-lambda": "^8.10.72",
     "@types/fs-extra": "^9.0.8",
     "@types/jest": "^26.0.19",
     "@types/node": "^14.14.31",
     "@types/react-dom": "^17.0.1",
-    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
-    "aws-cdk": "1.91.0",
-    "esbuild": "^0.8.54",
+    "aws-cdk": "1.92.0",
+    "esbuild": "^0.8.56",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.0",
     "fs-extra": "^9.1.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^17.0.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.4.4",
+    "ts-jest": "^26.5.3",
     "ts-node": "^9.1.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.91.0",
-    "@aws-cdk/aws-certificatemanager": "1.91.0",
-    "@aws-cdk/aws-cloudfront": "1.91.0",
-    "@aws-cdk/aws-cloudfront-origins": "1.91.0",
-    "@aws-cdk/aws-lambda": "1.91.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.91.0",
-    "@aws-cdk/aws-logs": "1.91.0",
-    "@aws-cdk/aws-route53": "1.91.0",
-    "@aws-cdk/aws-route53-targets": "1.91.0",
-    "@aws-cdk/aws-s3": "1.91.0",
-    "@aws-cdk/aws-s3-deployment": "1.91.0",
-    "@aws-cdk/core": "1.91.0",
+    "@aws-cdk/aws-apigateway": "1.92.0",
+    "@aws-cdk/aws-certificatemanager": "1.92.0",
+    "@aws-cdk/aws-cloudfront": "1.92.0",
+    "@aws-cdk/aws-cloudfront-origins": "1.92.0",
+    "@aws-cdk/aws-lambda": "1.92.0",
+    "@aws-cdk/aws-lambda-nodejs": "1.92.0",
+    "@aws-cdk/aws-logs": "1.92.0",
+    "@aws-cdk/aws-route53": "1.92.0",
+    "@aws-cdk/aws-route53-targets": "1.92.0",
+    "@aws-cdk/aws-s3": "1.92.0",
+    "@aws-cdk/aws-s3-deployment": "1.92.0",
+    "@aws-cdk/core": "1.92.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "react": "^17.0.1",
