--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cdk-esbuild-s3-website",
-  "version": "0.0.1",
+  "name": "rego.fyi",
+  "version": "0.0.2",
   "description": "Example of building a UI app and deploying in a single step with esbuild and CDK.",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "synth": "cdk synth",
     "test": "npm run test:opa && npm run test:go && npm run test:ts",
     "test:opa": "opa test ./opa",
-    "test:go": "go test ./...",
+    "test:go": "go test ./fns/go",
     "test:ts": "jest --coverage"
   },
   "keywords": [
@@ -32,46 +32,46 @@
     "url": "https://github.com/elthrasher/cdk-esbuild-s3-website"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.100.0",
+    "@aws-cdk/assert": "1.106.1",
     "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/react-hooks": "^5.1.2",
-    "@types/aws-lambda": "^8.10.75",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/react-hooks": "^7.0.0",
+    "@types/aws-lambda": "^8.10.76",
     "@types/fs-extra": "^9.0.11",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
-    "@types/react-dom": "^17.0.3",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "aws-cdk": "1.100.0",
-    "esbuild": "^0.11.12",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^14.17.1",
+    "@types/react-dom": "^17.0.5",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
+    "@typescript-eslint/parser": "^4.25.0",
+    "aws-cdk": "1.106.1",
+    "esbuild": "^0.12.5",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "fs-extra": "^9.1.0",
-    "jest": "^26.6.3",
+    "fs-extra": "^10.0.0",
+    "jest": "^27.0.3",
     "jest-raw-loader": "^1.0.1",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.5",
-    "ts-node": "^9.1.0",
-    "typescript": "^4.2.4"
+    "ts-jest": "^27.0.2",
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.100.0",
-    "@aws-cdk/aws-certificatemanager": "1.100.0",
-    "@aws-cdk/aws-cloudfront": "1.100.0",
-    "@aws-cdk/aws-cloudfront-origins": "1.100.0",
-    "@aws-cdk/aws-iam": "1.100.0",
-    "@aws-cdk/aws-lambda": "1.100.0",
-    "@aws-cdk/aws-lambda-nodejs": "1.100.0",
-    "@aws-cdk/aws-logs": "1.100.0",
-    "@aws-cdk/aws-route53": "1.100.0",
-    "@aws-cdk/aws-route53-targets": "1.100.0",
-    "@aws-cdk/aws-s3": "1.100.0",
-    "@aws-cdk/aws-s3-deployment": "1.100.0",
-    "@aws-cdk/core": "1.100.0",
-    "@material-ui/core": "^4.11.3",
+    "@aws-cdk/aws-apigateway": "1.106.1",
+    "@aws-cdk/aws-certificatemanager": "1.106.1",
+    "@aws-cdk/aws-cloudfront": "1.106.1",
+    "@aws-cdk/aws-cloudfront-origins": "1.106.1",
+    "@aws-cdk/aws-iam": "1.106.1",
+    "@aws-cdk/aws-lambda": "1.106.1",
+    "@aws-cdk/aws-lambda-nodejs": "1.106.1",
+    "@aws-cdk/aws-logs": "1.106.1",
+    "@aws-cdk/aws-route53": "1.106.1",
+    "@aws-cdk/aws-route53-targets": "1.106.1",
+    "@aws-cdk/aws-s3": "1.106.1",
+    "@aws-cdk/aws-s3-deployment": "1.106.1",
+    "@aws-cdk/core": "1.106.1",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
